objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Onboarding_Stages__c</fullName>
        <label>Onboarding Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Start</fullName>
                </value>
                <value>
                    <fullName>Legal Done</fullName>
                </value>
                <value>
                    <fullName>Legal Verified</fullName>
                </value>
                <value>
                    <fullName>Investing Done</fullName>
                </value>
                <value>
                    <fullName>Portfolio Done</fullName>
                </value>
                <value>
                    <fullName>Onboarding Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sheet_Url__c</fullName>
        <label>Google Sheet Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isPassSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPassSet</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>